check jwt signature against authority key

--- a/Reports/src/Handlers/Handler.WebApi/appsettings.Development.json
+++ b/Reports/src/Handlers/Handler.WebApi/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JWT": {
+    "Authority": "http://localhost:8080/realms/reports-realm",
+    "Audience": "reports-api"
   }
 }
