--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,5 +46,6 @@ services:
       dockerfile: Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - JWT__AUTHORITY=http://keycloak:8080/realms/reports-realm
     ports:
       - "8000:8080"
